add service, blog

--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -14,7 +14,7 @@
    <!-- f - furniture  -->
    <div class="wrapper wrapper--f-mb">
       <header class="f-header">
-         <div class="f-header__container f-header__container--width">
+         <div class="f-header__container">
             <div class="f-header__wrapper-nav">
                <a href="#" class="f-header__logo f-logo">
                   <svg class="f-logo__icon" width="32" height="35">
@@ -28,19 +28,14 @@
                      <a href="" class="f-nav__link">Home</a>
                   </li>
                   <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Pages</a>
+                     <a href="" class="f-nav__link">Product</a>
                   </li>
                   <li class="f-nav__item">
                      <a href="" class="f-nav__link">Services</a>
                   </li>
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Projects</a>
-                  </li>
+
                   <li class="f-nav__item">
                      <a href="" class="f-nav__link">Blog</a>
-                  </li>
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Contact Us</a>
                   </li>
                </ul>
             </div>
@@ -70,11 +65,12 @@
       </header>
       <main class="page page-f page--f-mb">
          <div class="popular-products popular-products--mb">
-            <div
-               class="popular-products__container popular-products__container--width">
+            <div class="popular-products__container">
                <div class="popular-products__top-part">
                   <div class="popular-products__title-group title-group">
-                     <h2 class="title-group__title">POPULAR PRODUCT</h2>
+                     <h2
+                        class="title-group__title title-group__title--not-after">
+                        POPULAR PRODUCT</h2>
                      <p class="title-group__text">Our best products</p>
                   </div>
                   <a href="#"
@@ -408,14 +404,245 @@
                </div>
             </div>
          </div>
+         <div class="service">
+            <div class="service__container">
+               <div class="service__list">
+                  <div class="service__item">
+                     <div class="service__img">
+                        <svg class="service__icon" width="48" height="48">
+                           <use
+                              href="img/furniture/furniture-icons-2.svg#icon-1">
+                           </use>
+                        </svg>
+                     </div>
+                     <div class="service__text-content">
+                        <h3 class="service__title">
+                           Free Shipping
+                        </h3>
+                        <p>
+                           On Orders Over $300
+                        </p>
+                     </div>
+                  </div>
+                  <div class="service__item">
+                     <div class="service__img">
+                        <svg class="service__icon" width="48" height="48">
+                           <use
+                              href="img/furniture/furniture-icons-2.svg#icon-2">
+                           </use>
+                        </svg>
+                     </div>
+                     <div class="service__text-content">
+                        <h3 class="service__title">
+                           Free Returns
+                        </h3>
+                        <p>
+                           Within 30 Days
+                        </p>
+                     </div>
+                  </div>
+                  <div class="service__item">
+                     <div class="service__img">
+                        <svg class="service__icon" width="48" height="48">
+                           <use
+                              href="img/furniture/furniture-icons-2.svg#icon-3">
+                           </use>
+                        </svg>
+                     </div>
+                     <div class="service__text-content">
+                        <h3 class="service__title">
+                           100% Secure
+
+                        </h3>
+                        <p>
+                           100% Secure payment
+                        </p>
+                     </div>
+                  </div>
+                  <div class="service__item">
+                     <div class="service__img">
+                        <svg class="service__icon">
+                           <use
+                              href="img/furniture/furniture-icons-2.svg#icon-4">
+                           </use>
+                        </svg>
+                     </div>
+                     <div class="service__text-content">
+                        <h3 class="service__title">
+                           Best Price
+                        </h3>
+                        <p>
+                           Guaranteed Gifts
+                        </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="blog ">
+            <div class=" blog__container">
+               <div class="blog__title-group title-group title-group--center">
+                  <h2 class="title-group__title title-group__title--jcc">
+                     Blog</h2>
+                  <p
+                     class="title-group__text title-group__text--center-color-dark">
+                     Latest Publications</p>
+               </div>
+               <div class="blog__slider slider">
+                  <button class="slider__btn" type="button">
+                     <svg class="slider__icon" width="17" height="33">
+                        <use
+                           href="img/furniture/furniture-icons-2.svg#icon-left">
+                        </use>
+                     </svg>
+                  </button>
+                  <div class="slider__list">
+                     <div class="slider__column">
+                        <div class="slider__item">
+                           <div class="slider__img">
+                              <img src="img/furniture/blog-1.webp"
+                                 alt="livinroom" width="380">
+                           </div>
+                           <p class="slider__date date">
+                              <span class="date__num">05</span>
+                              <span class="date__month">May</span>
+                           </p>
+                           <div
+                              class="slider__author-comments-block author-comments-block">
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-user">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">John
+                                    Doe</span>
+                              </a>
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">
+                                    9 Comments
+                                 </span>
+                              </a>
+                           </div>
+                           <h2 class="slider__title">
+                              <a class="slider__title-link" href="#">Lorem ipsum
+                                 dolor sit amet consectetur,
+                                 adipisicing elit.
+                              </a>
+                           </h2>
+                        </div>
+                     </div>
+                     <div class="slider__column">
+                        <div class="slider__item">
+                           <div class="slider__img">
+                              <img src="img/furniture/blog-2.webp"
+                                 alt="livinroom">
+                           </div>
+                           <p class="slider__date date">
+                              <span class="date__num">05</span>
+                              <span class="date__month">May</span>
+                           </p>
+                           <div
+                              class="slider__author-comments-block author-comments-block">
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-user">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">John
+                                    Doe</span>
+                              </a>
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">
+                                    9 Comments
+                                 </span>
+                              </a>
+                           </div>
+                           <h2 class="slider__title">
+                              <a class="slider__title-link" href="#">Lorem ipsum
+                                 dolor sit amet consectetur,
+                                 adipisicing elit.
+                              </a>
+                           </h2>
+                        </div>
+                     </div>
+                     <div class="slider__column">
+                        <div class="slider__item">
+                           <div class="slider__img">
+                              <img src="img/furniture/blog-3.webp"
+                                 alt="livinroom">
+                           </div>
+                           <p class="slider__date date">
+                              <span class="date__num">05</span>
+                              <span class="date__month">May</span>
+                           </p>
+                           <div
+                              class="slider__author-comments-block author-comments-block">
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-user">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">John
+                                    Doe</span>
+                              </a>
+                              <a href="#" class="author-comments-block__link">
+                                 <svg class="author-comments-block__icon"
+                                    width="14" height="14">
+                                    <use
+                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                    </use>
+                                 </svg>
+                                 <span class="author-comments-block__text">
+                                    9 Comments
+                                 </span>
+                              </a>
+                           </div>
+                           <h2 class="slider__title">
+                              <a class="slider__title-link" href="#">Lorem ipsum
+                                 dolor sit amet consectetur,
+                                 adipisicing elit.
+                              </a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <button class="slider__btn" type="button">
+                     <svg class="slider__icon" width="17" height="33">
+                        <use
+                           href="img/furniture/furniture-icons-2.svg#icon-right">
+                        </use>
+                     </svg>
+                  </button>
+               </div>
+            </div>
+         </div>
          <div class="reviews">
-            <div class="reviews__container reviews__container--width">
+            <div class="reviews__container">
                <div
                   class="reviews__title-group title-group title-group--center">
                   <h2
-                     class="title-group__title title-group__title--reviews-section">
+                     class="title-group__title title-group__title--color-pseudo-el-bg title-group__title--jcc">
                      Customer reviews</h2>
-                  <p class="title-group__text title-group__text--center">What
+                  <p class="title-group__text title-group__text--center-color">
+                     What
                      customers think about us</p>
                </div>
                <div class="reviews__list ">
@@ -515,8 +742,7 @@
                            <p class="reviews__text">Lorem ipsum dolor, sit amet
                               consectetur adipisicing elit. Vero maxime ex
                               voluptatem rem molestiae numquam cumque odio
-                              pariatur quod nostrum!
-                              lorem100</p>
+                              pariatur quod nostrum!</p>
                         </div>
                      </div>
                   </div>
@@ -525,7 +751,7 @@
          </div>
       </main>
       <footer class="footer footer--f-pt">
-         <div class="footer__container footer__container--width">
+         <div class="footer__container">
             <ul class="footer__nav nav">
                <li class="nav__item">
                   <a class="nav__link" href="index.html">Practice</a>
