--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -499,128 +499,154 @@
                   <div class="slider__list">
                      <div class="slider__column">
                         <div class="slider__item">
-                           <div class="slider__img">
+                           <a href="#" class="slider__img-link">
                               <img src="img/furniture/blog-1.webp"
                                  alt="livinroom" width="380">
+                           </a>
+                           <div class="slider__text-content">
+                              <p class="slider__date date">
+                                 <span class="date__num">05</span>
+                                 <span class="date__month">May</span>
+                              </p>
+                              <div
+                                 class="slider__author-comments-block author-comments-block">
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-user">
+                                       </use>
+                                    </svg>
+                                    <span
+                                       class="author-comments-block__text">John
+                                       Doe</span>
+                                 </a>
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                       </use>
+                                    </svg>
+                                    <span class="author-comments-block__text">
+                                       9 Comments
+                                    </span>
+                                 </a>
+                              </div>
+                              <h2 class="slider__title">
+                                 <a class="slider__title-link" href="#">Lorem
+                                    ipsum dolor sit amet consectetur adipisicing
+                                    elit. Blanditiis, aspernatur.
+                                    Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                 </a>
+                              </h2>
+                              <a href="#"
+                                 class="slider__link-more link-template">Read
+                                 more</a>
                            </div>
-                           <p class="slider__date date">
-                              <span class="date__num">05</span>
-                              <span class="date__month">May</span>
-                           </p>
-                           <div
-                              class="slider__author-comments-block author-comments-block">
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-user">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">John
-                                    Doe</span>
-                              </a>
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">
-                                    9 Comments
-                                 </span>
-                              </a>
-                           </div>
-                           <h2 class="slider__title">
-                              <a class="slider__title-link" href="#">Lorem ipsum
-                                 dolor sit amet consectetur,
-                                 adipisicing elit.
-                              </a>
-                           </h2>
                         </div>
                      </div>
                      <div class="slider__column">
                         <div class="slider__item">
-                           <div class="slider__img">
+                           <a href="#" class="slider__img-link">
                               <img src="img/furniture/blog-2.webp"
                                  alt="livinroom">
+                           </a>
+                           <div class="slider__text-content">
+                              <p class="slider__date date">
+                                 <span class="date__num">23</span>
+                                 <span class="date__month">Apr</span>
+                              </p>
+                              <div
+                                 class="slider__author-comments-block author-comments-block">
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-user">
+                                       </use>
+                                    </svg>
+                                    <span
+                                       class="author-comments-block__text">John
+                                       Doe</span>
+                                 </a>
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                       </use>
+                                    </svg>
+                                    <span class="author-comments-block__text">
+                                       9 Comments
+                                    </span>
+                                 </a>
+                              </div>
+                              <h2 class="slider__title">
+                                 <a class="slider__title-link" href="#">Lorem
+                                    ipsum
+                                    dolor sit amet consectetur,
+                                    adipisicing elit.
+                                 </a>
+                              </h2>
+                              <a href="#"
+                                 class="slider__link-more link-template">Read
+                                 more</a>
                            </div>
-                           <p class="slider__date date">
-                              <span class="date__num">05</span>
-                              <span class="date__month">May</span>
-                           </p>
-                           <div
-                              class="slider__author-comments-block author-comments-block">
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-user">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">John
-                                    Doe</span>
-                              </a>
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">
-                                    9 Comments
-                                 </span>
-                              </a>
-                           </div>
-                           <h2 class="slider__title">
-                              <a class="slider__title-link" href="#">Lorem ipsum
-                                 dolor sit amet consectetur,
-                                 adipisicing elit.
-                              </a>
-                           </h2>
                         </div>
                      </div>
                      <div class="slider__column">
                         <div class="slider__item">
-                           <div class="slider__img">
+                           <a href="#" class="slider__img-link">
                               <img src="img/furniture/blog-3.webp"
                                  alt="livinroom">
+                           </a>
+                           <div class="slider__text-content">
+                              <p class="slider__date date">
+                                 <span class="date__num">12</span>
+                                 <span class="date__month">Apr</span>
+                              </p>
+                              <div
+                                 class="slider__author-comments-block author-comments-block">
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-user">
+                                       </use>
+                                    </svg>
+                                    <span
+                                       class="author-comments-block__text">John
+                                       Doe</span>
+                                 </a>
+                                 <a href="#"
+                                    class="author-comments-block__link">
+                                    <svg class="author-comments-block__icon"
+                                       width="14" height="14">
+                                       <use
+                                          href="img/furniture/furniture-icons-2.svg#icon-comment">
+                                       </use>
+                                    </svg>
+                                    <span class="author-comments-block__text">
+                                       9 Comments
+                                    </span>
+                                 </a>
+                              </div>
+                              <h2 class="slider__title">
+                                 <a class="slider__title-link" href="#">Lorem
+                                    ipsum dolor sit amet
+                                 </a>
+                              </h2>
+                              <a href="#"
+                                 class="slider__link-more link-template">Read
+                                 more</a>
                            </div>
-                           <p class="slider__date date">
-                              <span class="date__num">05</span>
-                              <span class="date__month">May</span>
-                           </p>
-                           <div
-                              class="slider__author-comments-block author-comments-block">
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-user">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">John
-                                    Doe</span>
-                              </a>
-                              <a href="#" class="author-comments-block__link">
-                                 <svg class="author-comments-block__icon"
-                                    width="14" height="14">
-                                    <use
-                                       href="img/furniture/furniture-icons-2.svg#icon-comment">
-                                    </use>
-                                 </svg>
-                                 <span class="author-comments-block__text">
-                                    9 Comments
-                                 </span>
-                              </a>
-                           </div>
-                           <h2 class="slider__title">
-                              <a class="slider__title-link" href="#">Lorem ipsum
-                                 dolor sit amet consectetur,
-                                 adipisicing elit.
-                              </a>
-                           </h2>
                         </div>
                      </div>
                   </div>
@@ -648,6 +674,7 @@
                <div class="reviews__list ">
                   <div class="reviews__column">
                      <div class="reviews__item">
+
                         <div class="reviews__avatar">
                            <img src="img/furniture/person-3.webp" alt="man">
                         </div>
@@ -664,10 +691,18 @@
                               <p class="reviews__num">
                                  4.0</p>
                            </div>
-                           <p class="reviews__text">Lorem ipsum dolor, sit amet
-                              consectetur adipisicing elit. Vero maxime ex
-                              voluptatem rem molestiae numquam cumque odio
-                              pariatur quod nostrum!</p>
+                           <div class="reviews__text">
+                              <p>
+                                 Lorem ipsum dolor, sit
+                                 amet pariatur quod nostrum!
+                                 Lorem ipsum dolor, sit
+                                 amet pariatur quod nostrum!
+                                 Lorem, ipsum dolor sit amet consectetur
+                                 adipisicing elit. Excepturi iure corporis
+                                 nobis, nam quos dolor odio totam animi eos
+                                 unde.
+                              </p>
+                           </div>
                         </div>
                      </div>
                   </div>
