lesson 15  - add form, lesson 16 - fix title in form, reset

--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -15,45 +15,44 @@
    <div class="wrapper wrapper--f-mb">
       <header class="f-header">
          <div class="f-header__container">
-            <div class="f-header__wrapper-nav">
-               <a href="#" class="f-header__logo f-logo">
-                  <svg class="f-logo__icon" width="32" height="35">
-                     <use href="img/furniture/furniture-icons.svg#icon-f-logo">
-                     </use>
-                  </svg>
-                  <span class="f-logo__text">interior</span>
-               </a>
-               <ul class="f-header__nav f-nav">
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Home</a>
-                  </li>
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Product</a>
-                  </li>
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Services</a>
-                  </li>
-
-                  <li class="f-nav__item">
-                     <a href="" class="f-nav__link">Blog</a>
-                  </li>
-               </ul>
-            </div>
+            <a href="#" class="f-header__logo f-logo">
+               <svg class="f-logo__icon" width="32" height="35">
+                  <use href="img/furniture/furniture-icons.svg#icon-f-logo">
+                  </use>
+               </svg>
+               <span class="f-logo__text">interior</span>
+            </a>
+            <ul class="f-header__nav f-nav">
+               <li class="f-nav__item">
+                  <a href="" class="f-nav__link">Home</a>
+               </li>
+               <li class="f-nav__item">
+                  <a href="" class="f-nav__link">Product</a>
+               </li>
+               <li class="f-nav__item">
+                  <a href="" class="f-nav__link">Services</a>
+               </li>
+               <li class="f-nav__item">
+                  <a href="" class="f-nav__link">Blog</a>
+               </li>
+            </ul>
             <div class="f-header__search-basket search-basket">
-               <div class="search-basket__wrapper-search">
-                  <input class="search-basket__input" type="text" name="searth"
-                     id="searth">
-                  <label class="search-basket__label" for="searth">
+               <form action="#" method="GET" class="search-basket__form-search"
+                  enctype="multipart/form-data">
+                  <input class="search-basket__input" type="text">
+                  <div class="search-basket__decor-input"></div>
+                  <button class="search-basket__search-btn" type="submit">
                      <svg class="search-basket__icon icon-search" width="18"
                         height="19">
                         <use
                            href="img/furniture/furniture-icons.svg#icon-f-search">
                         </use>
                      </svg>
-                  </label>
-               </div>
-               <a href="#" class="search-basket__link">
-                  <svg class="search-basket__icon" width="19" height="18">
+                  </button>
+               </form>
+               <a href="#" class="search-basket__link-basket">
+                  <svg class="search-basket__icon icon-basket" width="19"
+                     height="18">
                      <use
                         href="img/furniture/furniture-icons.svg#icon-f-basket">
                      </use>
@@ -74,7 +73,8 @@
                      <p class="title-group__text">Our best products</p>
                   </div>
                   <a href="#"
-                     class="popular-products__more-link link-template">See More
+                     class="popular-products__more-link link-template">See
+                     More
                      Product
                   </a>
                </div>
