--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -219,7 +219,7 @@
                         <input class="form-practice__input" id="password"
                            type="password" name="password"
                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
-                           title="Minimum of eight characters, at least one uppercase letter, one lowercase letter, one number, and one special character">
+                           title="Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character, in Latin characters">
                      </div>
                      <div class="form-practice__line">
                         <label class="form-practice__label" for="file">
